--- a/associati.html
+++ b/associati.html
@@ -67,27 +67,21 @@
         <!-- /.container-fluid -->
     </nav>
 
+    <!-- Header -->
     <header>
-<!--
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="intro-text">
-                        <span class="name">Condominio dell'Arte</span>
-                        <hr class="star-light">
-                        <span class="skills">associat</span>
-                    </div>
                 </div>
             </div>
         </div>
- -->
     </header>
 
     <section id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2><br>associati</h2>
+                    <h2>Associati</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -142,7 +136,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						<p class="copyright small">&copy; Associazione Dondominio dell'arte, Via degli Artigiani 46, 04020 Itri LT<br />Tel. 0771.311441 – FAX 0771.728090 - 338.9967288 - info@condominiodellarte.com</p>
+						<p class="copyright small">&copy; Associazione Dondominio dell'arte, Via degli Artigiani 46, 04020 Itri LT<br>
+						Tel. 0771.311441 – FAX 0771.728090 - 338.9967288 - <a class="text-info" href="mailto:info@condominiodellarte.com">info@condominiodellarte.com</a><br>
+						Website created by <strong class="text-info">Tony Frost - <a class="text-info" href="http://xiradorn.it">xiradorn.it - Graphix Dojo</a></strong></p>
 					</div>
 				</div>
 			</div>
@@ -171,7 +167,7 @@
                             <h2>Stefano Campoli</h2>
                             <hr class="star-primary">
                             <img src="assets/stefanoCampoli/logo.jpg" class="img-responsive img-centered" alt="">
-                            <h3 class="text-danger">Descrizione o Curricula</h3>
+                            <h3 class="text-info">Descrizione o Curricula</h3>
 							<p>Inserimento dei dati e altro</p>
                             <ul class="list-inline item-details">
                                 <li>Associato: <strong>Stefano Campoli</strong>
@@ -181,7 +177,7 @@
                                 <li>Servizi: <strong><a href="#">Pasticceria</a></strong>
                                 </li>
                             </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            <button type="button" class="btn btn-info" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
                 </div>
