--- a/associati.html
+++ b/associati.html
@@ -11,7 +11,7 @@
     <title>Associati | condominio dell&#039;arte Itri | cultura, arte, creatività e artigianato del basso lazio</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap_a.min.css" rel="stylesheet" type="text/css">
 	
 	<!-- Associati Page CSS -->
     <link href="css/associati.css" rel="stylesheet" type="text/css">
@@ -49,7 +49,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="page-scroll">
-                        <a href="index.html">Home</a>
+                        <a href="./index.html">Home</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#portfolio">Associati</a>
@@ -58,7 +58,7 @@
                         <a href="#about">Info</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="contatti.html">Contatti</a>
+                        <a href="./contatti.html">Contatti</a>
                     </li>
                 </ul>
             </div>
@@ -72,6 +72,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
+					<div class="intro-text">
+                        <span class="name">Associati</span>
+                        <hr>
+                        <span class="skills">Espositori - Partners - Operatori - Utilità</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -79,13 +84,6 @@
 
     <section id="portfolio">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Associati</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
-
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
@@ -186,7 +184,7 @@
     </div>
 
 	<!-- Support Script -->
-    <script src="js/jquery-1.10.0.js"></script>
+    <script src="js/jquery-1.11.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="js/classie.js"></script>
