--- a/contatti.html
+++ b/contatti.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Associati | Condominio Dell&#039;Arte Itri | Cultura, arte, creatività e artigianato del Basso Lazio</title>
+    <title>Contatti e informazioni | Condominio dell&#039;Arte | Cultura, arte, creatività e artigianato del Basso Lazio</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap_a.min.css" rel="stylesheet" type="text/css">
@@ -20,7 +20,6 @@
     <!-- Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- IE8 support for HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -43,23 +42,23 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="img/logo-100x43.png" width="100" height="42" style="margin-top: -10px;"></a>
+                <a class="navbar-brand" href="./"><img src="img/logo-100x43.png" width="100" height="42"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
                     <li class="page-scroll">
                         <a href="./index.html">Home</a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="#portfolio">Associati</a>
+					<li class="page-scroll">
+                        <a href="./associati.html">Associati</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Info</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="./contatti.html">Contatti</a>
+                        <a href="#contatti">Contatti</a>
                     </li>
                 </ul>
             </div>
@@ -74,63 +73,57 @@
             <div class="row">
                 <div class="col-lg-12">
 					<div class="intro-text">
-                        <span class="name">Associati</span>
+                        <span class="name">Contatti</span>
                         <hr>
-                        <span class="skills">Espositori - Partners - Operatori - Utilità</span>
+                        <span class="skills">Vuoi contattarci? Ecco Come</span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
 
-    <section id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-								<br>
-                                Stefano Campoli
-								<br>
-								<small>Pasticceria</small>
-                            </div>
-                        </div>
-                        <img src="assets/stefanoCampoli/logo.jpg" class="img-responsive" alt="Stefano Campoli" />
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="success" id="about">
+    <section id="contatti">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
+                    <h3>Modulo Contatti</h3>
+                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Il Condominio dell&rsquo;Arte di Itri nasce come forma associativa per   promuovere l&rsquo;attività artigianale del basso lazio e contemporaneamente   assisterla fornendo visibilità, partecipazione ad eventi, spazi fisici   per le attività di laboratorio e di formazione.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Condomino dell&rsquo;Arte mette a   disposizione degli associati una struttura come vetrina promozionale,   per espositori di prodotti artistici e artigianali del nostro   territorio, al fine di valorizzare i loro lavori. Vi aspettiamo con   piacere !!!</p>
-</div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="contatti.html" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> maggiori informazioni
-                  </a>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <form role="form">
+                        <div class="row">
+                            <div class="form-group col-xs-12 floating-label-form-group">
+                                <label for="name">Nome</label>
+                                <input class="form-control" type="text" name="name" placeholder="Nome">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group col-xs-12 floating-label-form-group">
+                                <label for="email">Indirizzo Email</label>
+                                <input class="form-control" type="email" name="email" placeholder="Indirizzo email">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group col-xs-12 floating-label-form-group">
+                                <label for="message">Messaggio</label>
+                                <textarea placeholder="Messaggio" class="form-control" rows="5"></textarea>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="form-group col-xs-12">
+                                <button type="submit" class="btn btn-lg btn-success">Invia il messaggio</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </section>
 
-    
-
-	<footer class="text-center">
+    <footer class="text-center">
 		<div class="footer-above">
             <div class="container">
                 <div class="row">
@@ -143,6 +136,9 @@
                         <ul class="list-inline">
                             <li><a href="https://facebook.com/condominiodellarte" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
+                        </ul>
+						<br><br><br>
+						<ul class="list-inline">
                             <li><a href="https://twitter.com/condominiodellarte" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                         </ul>
@@ -165,47 +161,12 @@
 		</div>
 	</footer>
 
-<div class="scroll-top page-scroll visible-xs visble-sm">
+    <div class="scroll-top page-scroll visible-xs visble-sm">
         <a class="btn btn-primary" href="#page-top">
             <i class="fa fa-chevron-up"></i>
         </a>
     </div>
 
-    <!-- Portfolio Modals -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Stefano Campoli</h2>
-                            <hr class="star-primary">
-                            <img src="assets/stefanoCampoli/logo.jpg" class="img-responsive img-centered" alt="">
-                            <h3 class="text-info">Descrizione o Curricula</h3>
-							<p>Inserimento dei dati e altro</p>
-                            <ul class="list-inline item-details">
-                                <li>Associato: <strong>Stefano Campoli</strong>
-                                </li>
-                                <li>Data: <strong><a href="#">Data da Inserire</a></strong>
-                                </li>
-                                <li>Servizi: <strong><a href="#">Pasticceria</a></strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-info" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-	<!-- Support Script -->
     <script src="js/jquery-1.11.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
