--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Home Page | condominio dell&#039;arte Itri | cultura, arte, creatività e artigianato del basso lazio</title>
+    <title>Home Page | Condominio Dell&#039;Arte Itri | Cultura, arte, creatività e artigianato del Basso Lazio</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -175,12 +175,18 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h2>Condominio Social:</h2>
+					<i class="fa fa-phone fa-fw"></i> Tel. 0771.311441<br>
+					<i class="fa fa-fax fa-fw"></i> FAX 0771.728090 - 338.9967288<br>
+					<i class="fa fa-envelope fa-fw"></i> <a class="text-muted" style="color: #ffffff;" href="mailto:info@condominiodellarte.com">info@condominiodellarte.com</a>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                         <li>
                             <a href="https://twitter.com/condominiodellarte" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                         </li>
+					</ul>
+					<br><br><br><br>
+                    <ul class="list-inline banner-social-buttons">
                         <li>
                             <a href="https://facebook.com/condominiodellarte" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                         </li>
@@ -228,9 +234,10 @@
                             <a href="./contatti.html">Contatti</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">&copy; Associazione Dondominio dell'arte, Via degli Artigiani 46, 04020 Itri LT<br>
-						Tel. 0771.311441 – FAX 0771.728090 - 338.9967288 - <a class="text-info" href="mailto:info@condominiodellarte.com">info@condominiodellarte.com</a><br>
-						Website created by <strong class="text-info">Tony Frost - <a class="text-info" href="http://xiradorn.it">xiradorn.it - Graphix Dojo</a></strong></p>
+                    <p class="copyright text-muted small">&copy; Associazione Condominio dell'arte, Via degli Artigiani 46, 04020 Itri LT<br>
+						<i class="fa fa-phone fa-fw"></i> Tel. 0771.311441 – <i class="fa fa-fax fa-fw"></i> FAX 0771.728090 - 338.9967288 - <i class="fa fa-envelope fa-fw"></i> <a class="text-info" href="mailto:info@condominiodellarte.com">info@condominiodellarte.com</a><br>
+						<i class="fa fa-rebel fa-fw"></i> Website created by <strong class="text-info">Tony Frost - <a class="text-info" href="http://xiradorn.it">xiradorn.it - Graphix Dojo</a></strong>
+					</p>
                 </div>
             </div>
         </div>
