--- a/associati.html
+++ b/associati.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="img/logo-100x43.png" width="100" height="42" style="margin-top: -10px;"></a>
+                <a class="navbar-brand" href="./index.html"><img src="img/logo-100x43.png" width="100" height="42" style="margin-top: -10px;"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
