--- a/contatti.html
+++ b/contatti.html
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="./"><img src="img/logo-100x43.png" width="100" height="42"></a>
+                <a class="navbar-brand" href="./index.html"><img src="img/logo-100x43.png" width="100" height="42" style="margin-top: -10px;"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -136,9 +136,6 @@
                         <ul class="list-inline">
                             <li><a href="https://facebook.com/condominiodellarte" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
-                        </ul>
-						<br><br><br>
-						<ul class="list-inline">
                             <li><a href="https://twitter.com/condominiodellarte" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                         </ul>
