--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><img src="img/logo-100x43.png" width="100" height="42"></a>
+                <a class="navbar-brand" href="/index.html"><img src="img/logo-100x43.png" width="100" height="42" style="margin-top: -11px;"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
