associati.html updated

--- a/associati.html
+++ b/associati.html
@@ -172,21 +172,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>Info e Contatti</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Il Condominio dell&rsquo;Arte di Itri nasce come forma associativa per   promuovere l&rsquo;attività artigianale del basso lazio e contemporaneamente   assisterla fornendo visibilità, partecipazione ad eventi, spazi fisici   per le attività di laboratorio e di formazione.</p>
+                    <p>Il Condominio dell&rsquo;Arte di Itri nasce come forma associativa per promuovere l&rsquo;attività artigianale del basso lazio e contemporaneamente assisterla fornendo visibilità, partecipazione ad eventi, spazi fisici per le attività di laboratorio e di formazione.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Condomino dell&rsquo;Arte mette a   disposizione degli associati una struttura come vetrina promozionale,   per espositori di prodotti artistici e artigianali del nostro   territorio, al fine di valorizzare i loro lavori. Vi aspettiamo con   piacere !!!</p>
+                    <p>Condomino dell&rsquo;Arte mette a disposizione degli associati una struttura come vetrina promozionale, per espositori di prodotti artistici e artigianali del nostro territorio, al fine di valorizzare i loro lavori. Vi aspettiamo con piacere !!!</p>
 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="contatti.html" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> maggiori informazioni
-                  </a>
+                    <a href="./contatti.html" class="btn btn-lg btn-outline">
+                        <i class="fa fa-paper-plane"></i><strong>&nbsp;Contattaci qui</strong>
+					</a>
                 </div>
             </div>
         </div>
@@ -201,11 +201,11 @@
                         <p>Via degli Artigiani 46<br>04020 Itri LT</p>
                     </div>
                     <div class="footer-col col-md-6">
-                        <h3>#eee:#888<br>Networks</h3>
+                        <h3>Social<br>Networks</h3>
                         <ul class="list-inline">
-                            <li><a href="https://facebook.com/condominiodellarte" class="btn-#eee:#888 btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                            <li><a href="https://facebook.com/condominiodellarte" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
-                            <li><a href="https://twitter.com/condominiodellarte" class="btn-#eee:#888 btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                            <li><a href="https://twitter.com/condominiodellarte" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                         </ul>
                     </div>
