--- a/contatti.html
+++ b/contatti.html
@@ -123,7 +123,7 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Invia</button>
+                                <button type="submit" class="btn btn-success btn-lg">Invia il Messaggio <i class="fa fa-paper-plane"></i></button>
                             </div>
                         </div>
                     </form>
