update contact structure file: contatti.html, js/contact_me.js and mail/contact_me.php

--- a/contatti.html
+++ b/contatti.html
@@ -16,9 +16,6 @@
 	<!-- Associati Page CSS -->
     <link href="css/associati.css" rel="stylesheet" type="text/css">
     <link href="css/associati_ext.css" rel="stylesheet" type="text/css">
-	
-	<!-- Validatore form -->
-    <script src="js/contact_me.js"></script>
 
     <!-- Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -179,6 +176,10 @@
     <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
     <script src="js/freelancer.js"></script>
+		
+	<!-- Validatore form -->
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script>
 
 </body>
 
