index.html small update

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <h2>Condominio Social:</h2>
 					<i class="fa fa-phone fa-fw"></i> Tel. 0771.311441<br>
 					<i class="fa fa-fax fa-fw"></i> FAX 0771.728090 - 338.9967288<br>
-					<i class="fa fa-envelope fa-fw"></i> <a class="text-muted" style="color: #ffffff;" href="mailto:info@condominiodellarte.com">info@condominiodellarte.com</a>
+					<i class="fa fa-envelope fa-fw"></i> <a class="text-muted" style="color: #ffffff;" href="./contatti.html">info@condominiodellarte.com</a>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
