--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+					<li>
+                        <a href="#home">Home</a>
+                    </li>
                     <li>
                         <a href="#about">About</a>
                     </li>
@@ -75,7 +78,7 @@
     </nav>
 
     <!-- Header -->
-    <div class="intro-header">
+    <div class="intro-header" id="home">
 
         <div class="container">
 
@@ -98,8 +101,7 @@
     <!-- /.intro-header -->
 
     <!-- Page Content -->
-	<a href="#" name="about"></a>
-    <div class="content-section-a">
+    <div class="content-section-a" id="about">
 
         <div class="container">
 
@@ -121,8 +123,7 @@
 
     </div>
     <!-- /.content-section-a -->
-	<a href="#" name="services"></a>
-    <div class="content-section-b">
+    <div class="content-section-b" id="services">
 
         <div class="container">
 
@@ -144,8 +145,7 @@
 
     </div>
     <!-- /.content-section-b -->
-	<a href="#" name="associa"></a>
-    <div class="content-section-a">
+    <div class="content-section-a" id="associa">
 
         <div class="container">
 
@@ -167,8 +167,7 @@
     </div>
     <!-- /.content-section-a -->
 	
-	<a href="#" name="social"></a>
-    <div class="banner">
+    <div class="banner" id="social">
 
         <div class="container">
 
@@ -248,6 +247,13 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+	
+	<!-- Bootstrap Xiradorn JavaScript -->
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="js/classie.js"></script>
+	<script src="js/cbpAnimatedHeader.js"></script>
+    <script src="js/xirdexer.js"></script>
+	<script src="js/holder.js"></script>
 
 </body>
 
