--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     </ul>
                     <p class="copyright text-muted">&copy; Associazione Condominio dell'Arte, Via degli Artigiani 46, 04020 Itri LT<br>
 						<i class="fa fa-phone fa-fw"></i> Tel. 0771.311441 – <i class="fa fa-fax fa-fw"></i> FAX 0771.728090 - 338.9967288 - <i class="fa fa-envelope fa-fw"></i> <a class="text-info" href="./contatti.html">info@condominiodellarte.com</a><br>
-						<i class="fa fa-rebel fa-fw"></i> Website created by <strong class="text-info">Tony Frost - <a class="text-info" href="http://xiradorn.it">xiradorn.it - Graphix Dojo</a></strong>
+						<i class="fa fa-rebel fa-fw"></i> Website created by <strong class="text-info">Tony Frost - <a class="text-info" href="http://xiradorn.it">xiradorn.it - Graphix Dojo</a> &copy; 2014 / 2015</strong>
 					</p>
                 </div>
             </div>
