Finally fixing for smooth scroll index page

--- a/associati.html
+++ b/associati.html
@@ -50,7 +50,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="page-scroll">
-                        <a href="./index.html">Home</a>
+                        <a href="./index.html">Home <i class="fa fa-paper-plane"></i></a>
                     </li>
                     <li class="page-scroll">
                         <a href="#portfolio">Associati</a>
@@ -59,7 +59,7 @@
                         <a href="#about">Info</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="./contatti.html">Contatti</a>
+                        <a href="./contatti.html">Contatti <i class="fa fa-paper-plane"></i></a>
                     </li>
                 </ul>
             </div>
