--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
 </head>
 
-<body>
+<body id="page-top" class="index">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
+            <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -49,26 +49,26 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-					<li>
+					<li class="page-scroll">
                         <a href="#home">Home</a>
                     </li>
-                    <li>
+                    <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
-                    <li>
+                    <li class="page-scroll">
                         <a href="#services">Espositori</a>
                     </li>
-                    <li>
+                    <li class="page-scroll">
                         <a href="#associa">Associarsi</a>
                     </li>
-					<li>
-                        <a href="./associati.html">Associati</a>
+					<li class="page-scroll">
+                        <a href="./associati.html">Associati <i class="fa fa-paper-plane"></i></a>
                     </li>
-					<li>
+					<li class="page-scroll">
                         <a href="#social">Social</a>
                     </li>
-					<li>
-                        <a href="./contatti.html">Contatti</a>
+					<li class="page-scroll">
+                        <a href="./contatti.html">Contatti <i class="fa fa-paper-plane"></i></a>
                     </li>
                 </ul>
             </div>
@@ -222,7 +222,7 @@
                         </li>
 						<li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="./associati.html">Associati</a>
+                            <a href="./associati.html">Associati <i class="fa fa-paper-plane"></i></a>
                         </li>
 						<li class="footer-menu-divider">&sdot;</li>
                         <li>
@@ -230,7 +230,7 @@
                         </li>
 						<li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="./contatti.html">Contatti</a>
+                            <a href="./contatti.html">Contatti <i class="fa fa-paper-plane"></i></a>
                         </li>
                     </ul>
                     <p class="copyright text-muted">&copy; Associazione Condominio dell'Arte, Via degli Artigiani 46, 04020 Itri LT<br>
