--- a/contatti.html
+++ b/contatti.html
@@ -52,10 +52,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="./index.html">Home</a>
+                        <a href="./index.html">Home <i class="fa fa-paper-plane"></i></a>
                     </li>
 					<li class="page-scroll">
-                        <a href="./associati.html">Associati</a>
+                        <a href="./associati.html">Associati <i class="fa fa-paper-plane"></i></a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contatti">Contatti</a>
