--- a/associati.html
+++ b/associati.html
@@ -37,13 +37,15 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="./index.html"><img src="img/logo-100x43.png" width="100" height="42" style="margin-top: -10px;"></a>
+                <a class="navbar-brand" href="./index.html">
+					<img src="img/logo-100x43.png" width="100" height="42" style="margin-top: -10px;">
+				</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,9 +54,10 @@
                     <li class="page-scroll">
                         <a href="./index.html">Home <i class="fa fa-paper-plane"></i></a>
                     </li>
-                    <li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Artigianato <span class="caret"></span></a>
+                    <li class="dropdown page-scroll">
+						<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Artigianato <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
+							<!--//li class="dropdown-header">Dropdown header</li//-->
 							<li class="page-scroll"><a href="#legno">legno</a></li>
 							<li class="page-scroll"><a href="#ceramica">ceramica</a></li>
 							<li class="page-scroll"><a href="#porcellana">porcellana</a></li>
