Enhanced the mobile compatibility

--- a/associati.html
+++ b/associati.html
@@ -54,7 +54,7 @@
                     <li class="page-scroll">
                         <a href="./index.html">Home <i class="fa fa-paper-plane"></i></a>
                     </li>
-                    <li class="dropdown page-scroll">
+                    <li class="dropdown page-scroll hidden-xs">
 						<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Artigianato <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
 							<!--//li class="dropdown-header">Dropdown header</li//-->
@@ -78,14 +78,22 @@
 							<!--//li class="divider"></li//-->
 						</ul>
 					</li>
-					<li class="dropdown">
+					<li class="visible-xs-block page-scroll">
+						<!--// Xiradorn Mobile fix //-->
+						<a href="#artigianato">Artigianato</a>
+					</li>
+					<li class="dropdown hidden-xs">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Arte e Cultura <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
 							<li class="page-scroll"><a href="#libri">libri</a></li>
 							<li class="page-scroll"><a href="#quadri">quadri</a></li>
 						</ul>
 					</li>
-					<li class="dropdown">
+					<li class="visible-xs-block page-scroll">
+						<!--// Xiradorn Mobile fix //-->
+						<a href="#arte">Arte e Cultura</a>
+					</li>
+					<li class="dropdown hidden-xs">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Prodotti Tipici <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
 							<li class="page-scroll"><a href="#pasta">pasta</a></li>
@@ -97,6 +105,10 @@
 							<li class="page-scroll"><a href="#cioccolato">cioccolato</a></li>
 							<li class="page-scroll"><a href="#caff&egrave;">caff&egrave;</a></li>
 						</ul>
+					</li>
+					<li class="visible-xs-block page-scroll">
+						<!--// Xiradorn Mobile fix //-->
+						<a href="#prodotti">Prodotti Tipici</a>
 					</li>
                     <li class="page-scroll">
                         <a href="#about">Info</a>
