--- a/associati.html
+++ b/associati.html
@@ -565,7 +565,7 @@
                                 <li>Servizi: <strong><a href="#">Pasticceria</a></strong>
                                 </li>
                             </ul>
-                            <button type="button" class="btn btn-info" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            <button type="button" class="btn btn-info" data-dismiss="modal"><i class="fa fa-times"></i> Chiudi la Scheda</button>
                         </div>
                     </div>
                 </div>
