--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Home CSS -->
-    <link href="css/home.css" rel="stylesheet">
-    <link href="css/home_ext.css" rel="stylesheet">
+    <link href="css/home.min.css" rel="stylesheet">
+    <link href="css/home_ext.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
