--- a/contatti.html
+++ b/contatti.html
@@ -14,8 +14,8 @@
     <link href="css/bootstrap_a.min.css" rel="stylesheet" type="text/css">
 	
 	<!-- Associati Page CSS -->
-    <link href="css/associati.css" rel="stylesheet" type="text/css">
-    <link href="css/associati_ext.css" rel="stylesheet" type="text/css">
+    <link href="css/associati.min.css" rel="stylesheet" type="text/css">
+    <link href="css/associati_ext.min.css" rel="stylesheet" type="text/css">
 
     <!-- Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
