First alpha upload

--- a/artigianato.html
+++ b/artigianato.html
@@ -54,6 +54,9 @@
                     <li class="page-scroll">
                         <a href="./index.html">Home <i class="fa fa-paper-plane"></i></a>
                     </li>
+					<li class="page-scroll">
+                        <a href="./arte-e-cultura.html">Arte e Cultura <i class="fa fa-paper-plane"></i></a>
+                    </li>
                     <li class="dropdown page-scroll hidden-xs">
 						<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Artigianato <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
@@ -82,34 +85,9 @@
 						<!--// Xiradorn Mobile fix //-->
 						<a href="#artigianato">Artigianato</a>
 					</li>
-					<li class="dropdown hidden-xs">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Arte e Cultura <span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li class="page-scroll"><a href="#libri">libri</a></li>
-							<li class="page-scroll"><a href="#quadri">quadri</a></li>
-						</ul>
-					</li>
-					<li class="visible-xs-block page-scroll">
-						<!--// Xiradorn Mobile fix //-->
-						<a href="#arte">Arte e Cultura</a>
-					</li>
-					<li class="dropdown hidden-xs">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Prodotti Tipici <span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li class="page-scroll"><a href="#biscotti">biscotti</a></li>
-							<li class="page-scroll"><a href="#caff&egrave;">caff&egrave;</a></li>
-							<li class="page-scroll"><a href="#cioccolato">cioccolato</a></li>
-							<li class="page-scroll"><a href="#miele">miele</a></li>
-							<li class="page-scroll"><a href="#olio">olio</a></li>
-							<li class="page-scroll"><a href="#olive">olive</a></li>
-							<li class="page-scroll"><a href="#pasta">pasta</a></li>
-							<li class="page-scroll"><a href="#vino">vino</a></li>
-						</ul>
-					</li>
-					<li class="visible-xs-block page-scroll">
-						<!--// Xiradorn Mobile fix //-->
-						<a href="#prodotti">Prodotti Tipici</a>
-					</li>
+					<li class="page-scroll">
+                        <a href="./prodotti-tipici.html">Prodotti Tipici <i class="fa fa-paper-plane"></i></a>
+                    </li>
                     <li class="page-scroll">
                         <a href="#about">Info</a>
                     </li>
@@ -129,7 +107,7 @@
             <div class="row">
                 <div class="col-lg-12">
 					<div class="intro-text">
-                        <span class="name">Associati</span>
+                        <span class="name">Artigianato</span>
                         <hr>
                         <span class="skills">Espositori - Partners - Operatori - Utilità</span>
                     </div>
@@ -156,7 +134,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="assets/stefanoCampoli/logo.jpg" class="img-responsive" alt="Stefano Campoli" />
+                        <img src="assets/expo2015/prodotti/biscotti/stefanoCampoli/logo.jpg" class="img-responsive" alt="Stefano Campoli" />
                     </a>
                 </div>
 				
@@ -488,7 +466,7 @@
                         <div class="modal-body">
                             <h2>Stefano Campoli</h2>
                             <hr class="star-primary">
-                            <img src="assets/stefanoCampoli/logo.jpg" class="img-responsive img-centered" alt="">
+                            <img src="assets/expo2015/prodotti/biscotti/stefanoCampoli/logo.jpg" class="img-responsive img-centered" alt="">
                             <h3 class="text-info">Descrizione o Curricula</h3>
 							<p>Dolci Tipici Ciociari, con specialit&#224; quali Amaretti, Biscotti e Ciambelline di vari gusti, ma anche crostate, torte, pizzette, rustici, panettone e colombe di produzione propria e tanto altro ancora...servizio prenotazione rinfreschi per cerimonie.</p>
 							
