--- a/arte-e-cultura.html
+++ b/arte-e-cultura.html
@@ -102,7 +102,7 @@
     <section id="portfolio">
         <div class="container">
 			<!--// Arte e Cultura //-->
-			<div class="row" id="artigianato">
+			<div class="row" id="libri">
                 <div class="col-lg-12 text-center">
                     <h2>Libri</h2>
                     <hr class="star-primary">
@@ -346,7 +346,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="holder.js/100%x218/#eee:#888/text:Associato" class="img-responsive" />
+                        <img src="holder.js/100%x218/#eee:#888/text:Libro" class="img-responsive" />
                     </a>
                 </div>
 				<div class="col-sm-2 portfolio-item">
@@ -356,11 +356,105 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="holder.js/100%x218/#eee:#888/text:Associato" class="img-responsive" />
+                        <img src="holder.js/100%x218/#eee:#888/text:Libro" class="img-responsive" />
                     </a>
                 </div>
             </div>
-        </div>
+        
+			<div class="row" id="quadri">
+                <div class="col-lg-12 text-center">
+                    <h2>Quadri</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+			<!--// Quadri Riga 1 //-->
+			<div class="row">				
+				<div class="col-sm-3 portfolio-item">
+                    <a href="#portfolioModalN" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="holder.js/100%x218/#eee:#888/text:Quadro" class="img-responsive" />
+                    </a>
+                </div>
+				<div class="col-sm-3 portfolio-item">
+                    <a href="#portfolioModalN" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="holder.js/100%x218/#eee:#888/text:Quadro" class="img-responsive" />
+                    </a>
+                </div>
+				<div class="col-sm-3 portfolio-item">
+                    <a href="#portfolioModalN" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="holder.js/100%x218/#eee:#888/text:Quadro" class="img-responsive" />
+                    </a>
+                </div>
+				<div class="col-sm-3 portfolio-item">
+                    <a href="#portfolioModalN" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="holder.js/100%x218/#eee:#888/text:Quadro" class="img-responsive" />
+                    </a>
+                </div>
+            </div>
+			<!--// Quadri Riga 2 //-->
+			<div class="row">				
+				<div class="col-sm-3 portfolio-item">
+                    <a href="#portfolioModalN" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="holder.js/100%x218/#eee:#888/text:Quadro" class="img-responsive" />
+                    </a>
+                </div>
+				<div class="col-sm-3 portfolio-item">
+                    <a href="#portfolioModalN" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="holder.js/100%x218/#eee:#888/text:Quadro" class="img-responsive" />
+                    </a>
+                </div>
+				<div class="col-sm-3 portfolio-item">
+                    <a href="#portfolioModalN" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="holder.js/100%x218/#eee:#888/text:Quadro" class="img-responsive" />
+                    </a>
+                </div>
+				<div class="col-sm-3 portfolio-item">
+                    <a href="#portfolioModalN" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="holder.js/100%x218/#eee:#888/text:Quadro" class="img-responsive" />
+                    </a>
+                </div>
+            </div>
+		
+		</div>
     </section>
 	
     <section class="success" id="about">
