--- a/contatti.html
+++ b/contatti.html
@@ -56,9 +56,9 @@
                     </li>
 					<li class="page-scroll dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Associati <span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li class="page-scroll"><a href="./artigianato.html">Artigianato <i class="fa fa-paper-plane"></i></a></li>
+						<ul class="dropdown-menu dropdown-menu-right" role="menu">
 							<li class="page-scroll"><a href="./arte-e-cultura.html">Arte e Cultura <i class="fa fa-paper-plane"></i></a></li>
+							<li class="page-scroll"><a href="./artigianato.html">Artigianato <i class="fa fa-paper-plane"></i></a></li>
 							<li class="page-scroll"><a href="./prodotti-tipici.html">Prodotti Tipico <i class="fa fa-paper-plane"></i></a></li>
 						</ul>
 					</li>
