--- a/contatti.html
+++ b/contatti.html
@@ -57,9 +57,9 @@
 					<li class="page-scroll dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Associati <span class="caret"></span></a>
 						<ul class="dropdown-menu dropdown-menu-right" role="menu">
-							<li class="page-scroll"><a href="./arte-e-cultura.html">Arte e Cultura <i class="fa fa-paper-plane"></i></a></li>
-							<li class="page-scroll"><a href="./artigianato.html">Artigianato <i class="fa fa-paper-plane"></i></a></li>
-							<li class="page-scroll"><a href="./prodotti-tipici.html">Prodotti Tipico <i class="fa fa-paper-plane"></i></a></li>
+							<li class="page-scroll"><a href="./arte-e-cultura.html" style="text-transform: none">Arte e Cultura <i class="fa fa-paper-plane"></i></a></li>
+							<li class="page-scroll"><a href="./artigianato.html" style="text-transform: none">Artigianato <i class="fa fa-paper-plane"></i></a></li>
+							<li class="page-scroll"><a href="./prodotti-tipici.html" style="text-transform: none">Prodotti Tipici <i class="fa fa-paper-plane"></i></a></li>
 						</ul>
 					</li>
                     <li class="page-scroll">
