--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<ul class="dropdown-menu dropdown-menu-right" role="menu">
 							<li class="page-scroll"><a href="./arte-e-cultura.html">Arte e Cultura <i class="fa fa-paper-plane"></i></a></li>
 							<li class="page-scroll"><a href="./artigianato.html">Artigianato <i class="fa fa-paper-plane"></i></a></li>
-							<li class="page-scroll"><a href="./prodotti-tipici.html">Prodotti Tipico <i class="fa fa-paper-plane"></i></a></li>
+							<li class="page-scroll"><a href="./prodotti-tipici.html">Prodotti Tipici <i class="fa fa-paper-plane"></i></a></li>
 						</ul>
 					</li>
 					<li class="page-scroll">
